Fixing some table issues; Made table dynamic

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -32,24 +32,28 @@
         </select>
     </form>
 
-    <!-- User input box (only appears when station is chosen) -->
+        <!-- User input box (only appears when station is chosen) -->
         <div id="userInput" style="display:none;">
             <label for="input"><br>Input your suggestion: </label>
             <input type='text' id='input' />
             <input type='button' value='Submit' id='add' />
 
             <br><br>
+            <!-- command + / to comment multiple lines out
         <table id="table">
             <tr>
                 <th> Station Name </th>
                 <th> User Comment </th>
             </tr>
-        </table>
-        <style>
+        </table> -->
+       
+        <!-- <style>
             table, th, td {
                 border: 1px solid black;
             }
-        </style>
+        </style> -->
+        
+            <div id="websiteTable"></div>
 
 
 
