--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTAccessibility</title>
+    <h1>
+    <span style="color:rgb(0, 0, 255) ">MTA</span>
+    <span style="color:black">ccessibility</span>
+    </h1>
 </head>
 <body>
     <!-- dropdown menu #1: Borough -->
