--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTAccessibility</title>
-    <h1>
+    <center><h1>
     <span style="color:rgb(0, 0, 255) ">MTA</span>
     <span style="color:black">ccessibility</span>
-    </h1>
+    </h1></center><br>
 </head>
 <body>
+    <center>
     <!-- dropdown menu #1: Borough -->
     <form>
         <label>Select Borough:</label>
@@ -58,7 +59,7 @@
         </style> -->
         
             <div id="websiteTable"></div>
-
+        </center>
 
 
 
