Fixed order of headers, typo

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTAccessibility</title>
     <center><h1>
-    <img src="metro-icon-11.jpg" alt="Metro Icon"
-    <span style="color:rgb(0, 0, 255) ">MTA</span>
-    <span style="color:black">ccessibility</span>
-    </h1></center><br>
+    <img src="metro-icon-11.jpg" alt="Metro Icon">
+    </h1>
+    <h2>
+        <span style="color:rgb(0, 0, 255) ">MTA</span>
+        <span style="color:black">ccessibility</span>
+    </h2>
+    </center><br>
 </head>
 <body>
     <center>
