--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTAccessibility</title>
     <center><h1>
-    <img src="metro-icon-11.jpg" alt="Metro Icon">
+    <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:200px;height:200px;">
     </h1>
     <h2>
         <span style="color:rgb(0, 0, 255) ">MTA</span>
