Changing styling of h2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,11 +8,8 @@
     <center><h1>
     <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
     </h1>
-    <h2>
-        <span style="color:rgb(0, 0, 255) ">MTA</span>
-        <span style="color:black">ccessibility</span>
-    </h2>
-    </center><br>
+    <h2 style="font-size:7vw" style="background: -webkit-linear-gradient(blue, black)">MTAccessibility</h2>
+    </center>
 </head>
 <body>
     <center>
