--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,7 +8,13 @@
     <center><h1>
     <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
     </h1>
-    <h2 style="font-size:7vw" style="background: -webkit-linear-gradient(blue, black)">MTAccessibility</h2>
+    <h2>MTAccessibility</h2>
+    <style>
+    h2 {
+        font-size: 7px;
+        background: -webkit-linear-gradient(blue,black);
+    }
+    </style>
     </center>
 </head>
 <body>
