--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,6 +13,8 @@
     h2 {
         font-size: 7px;
         background: -webkit-linear-gradient(blue,black);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
     </style>
     </center>
