Trying to fix style

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTAccessibility</title>
-    <center><h1>
+    <center>
+    <h1>
     <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
     </h1>
+
     <h2 data-shadow='dang!'>MTAccessibility</h2>
     <style>
                 @import url(https://fonts.googleapis.com/css?family=Righteous);
@@ -34,14 +36,14 @@
                     height: 100%;
                     }
 
-                h1 {
+                h2 {
                 display: inline-block;
                 color: white;
                 font-family: 'Righteous', serif;
                 font-size: 12em; 
                 text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
                 }
-                h1:after {
+                h2:after {
                     content: attr(data-shadow);
                     position: absolute;
                     top: .06em; left: .06em;
