--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,7 @@
     <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
     </h1>
 
-    <h2 data-shadow='dang!'>MTAccessibility</h2>
+    <h2 data-shadow='MTAccessibility'>MTAccessibility</h2>
     <style>
                 @import url(https://fonts.googleapis.com/css?family=Righteous);
 
@@ -24,23 +24,12 @@
                 html, body {
                 height: 100%;
                 }
-                body {
-                    text-align: center;
-                    background-color: hsla(230,40%,50%,1);
-                    }
-                body:before {
-                    content: '';
-                    display: inline-block;
-                    vertical-align: middle;
-                    font-size: 0;
-                    height: 100%;
-                    }
-
+                
                 h2 {
                 display: inline-block;
                 color: white;
                 font-family: 'Righteous', serif;
-                font-size: 12em; 
+                font-size: 5em; 
                 text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
                 }
                 h2:after {
