More fixes to title

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: blanchedalmond;">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
     </h1>
 
-    <h2 data-shadow='MTAccessibility'>MTAccessibility</h2>
+    <h2 data-shadow='MTAccessibility'>MTAccessibility</h2> <br>
     <style>
                 @import url(https://fonts.googleapis.com/css?family=Righteous);
 
