--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head style="background-color: blanchedalmond;">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,7 +60,7 @@
     </style>
     </center>
 </head>
-<body>
+<body style="background-color: blanchedalmond;">
     <center>
     <!-- dropdown menu #1: Borough -->
     <form>
