Experimenting with colors

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -33,7 +33,7 @@
 
             body {
                 text-align: center;
-                background-color: white;
+                background-color: hsla(36, 76%, 89%, 1);
             }
 
             body:before {
@@ -46,10 +46,10 @@
 
             h2 {
                 display: inline-block;
-                color: rgb(70, 113, 255);
+                color: hsla(207, 69%, 74%, 1);
                 font-family: 'Righteous', serif;
-                font-size: 12em;
-                text-shadow: .03em .03em 0 hsla(230, 40%, 50%, 1);
+                font-size: 5em;
+                text-shadow: .03em .03em 0 hsla(36, 76%, 89%, 1);
             }
 
             h2:after {
@@ -62,8 +62,8 @@
                 background-image:
                     linear-gradient(45deg,
                         transparent 45%,
-                        hsla(230, 40%, 50%, 1) 45%,
-                        hsla(230, 40%, 50%, 1) 55%,
+                        hsla(207, 69%, 74%, 1) 45%,
+                        hsla(207, 69%, 74%, 1) 55%,
                         transparent 0);
                 background-size: .05em .05em;
                 -webkit-background-clip: text;
