--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
             <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
         </h1>
 
-        <h2 data-shadow='MTAccessibility'>MTAccessibility</h2>
+        <h2 data-shadow='MTAccessibility'>MTAccessibility</h2><br>
 
         <!-- Styling for MTAccessibility Title -->
         <style>
@@ -83,10 +83,12 @@
             }
         </style>
 
+        <h3>Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</h3>
+
     </center>
 </head>
 
-<body style="background-color: blanchedalmond;">
+<body>
     <center>
         <!-- dropdown menu #1: Borough -->
         <form>
