Changed caption to header

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,7 +80,7 @@
             }
         </style>
 
-        <label style="height:66px;width:866px;" style="font-size:1.17em" style="font-family: 'Righteous', serif" style="color:rgb(41,120,181)">Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</label>
+        <h3 style="height:66px;width:866px;" style="font-size:1.17em" style="font-family: 'Righteous', serif" style="color:rgb(41,120,181)">Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</h3>
         <br>
     </center>
 </head>
