Changed so table appears on borough select

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -124,9 +124,9 @@
 
         <!-- User input box (only appears when station is chosen) -->
         <div id="userInput" style="display:none;">
-            <label for="input"><br>Input your suggestion: </label>
+            <label for="input" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><br>Input your suggestion: </label>
             <input type='text' id='input' />
-            <input type='button' value='Submit' id='add' />
+            <input type='button' value='Submit' id='add' style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" />
 
             <br><br>
             <!-- command + / to comment multiple lines out
