--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -147,7 +147,14 @@
             <div id="websiteTable"></div>
     </center>
 
+    <p class="author-credit">By Christina Buencamino | Bit Project 2021</p>
 
+    <style>
+        .author-credit {
+            text-align: left;
+            margin-top: 1000px;
+        }
+    </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
