--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -79,9 +79,11 @@
                 }
             }
         </style>
-
-        <h3 style="height:66px;width:866px;font-size:1.1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</h3>
+        <label style="font-size:1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">By Christina Buencamino | Bit Project 2021</label><br>
+        <br>
+        <h3 style="color: hsla(207, 69%, 74%, 1);height:66px;width:866px;font-size:1.1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</h3>
         <br><br>
+        
     </center>
 </head>
 
@@ -146,15 +148,6 @@
 
             <div id="websiteTable"></div>
     </center>
-
-    <p class="author-credit">By Christina Buencamino | Bit Project 2021</p>
-
-    <style>
-        .author-credit {
-            text-align: left;
-            margin-top: 1000px;
-        }
-    </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
