Trying to add date posted

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -129,6 +129,10 @@
         <div id="userInput" style="display:none;">
             <label for="input" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><br>Input your suggestion: </label>
             <input type='text' id='input' />
+
+            <label for="date" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><br>Date of Comment: </label>
+            <input type='text' id='date' />
+
             <input type='button' value='Submit' id='add' style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" />
 
             <br><br>
