Cleaned up CSS on caption

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -81,8 +81,7 @@
         </style>
         <label style="font-size:1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">By Christina Buencamino | Bit Project 2021</label><br>
         <br>
-        <h3 style="color: hsla(207, 69%, 74%, 1);height:66px;width:866px;font-size:1.1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">Everyone deserves proper access to efficient and accessible transport. Communicate with fellow New Yorkers to gain the best experience possible. Select your borough to view user-inputted comments on the status of local stations to better plan out your commute! You can also choose to add your own comments.</h3>
-        <br><br>
+        <h3 style="color: hsla(207, 69%, 74%, 1);height:66px;width:866px;font-size:1.1em;font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, serif;color:black;">Communicate with fellow New Yorkers on subway station issues/delays/statuses. Select your borough to view user comments in your area. Select a station to add your own comment.</h3>
         
     </center>
 </head>
@@ -129,8 +128,8 @@
         <div id="userInput" style="display:none;">
             <label for="input" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><br>Input your suggestion: </label>
             <input type='text' id='input' />
-
-            <label for="date" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"><br>Date of Comment: </label>
+            <br><br>
+            <label for="date" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Date of Comment (MM/DD/YYYY): </label>
             <input type='text' id='date' />
 
             <input type='button' value='Submit' id='add' style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" />
