Trying to fix show issue

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,10 +8,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>MTAccessibility</title>
     <center>
+        <!-- Metro Icon image at top (https://www.w3schools.com/html/html_images.asp)(https://icon-library.com/icon/metro-icon-11.html)-->
         <h1>
             <img src="metro-icon-11.jpg" alt="Metro Icon" style="width:100px;height:100px;">
         </h1>
 
+        <!-- Title with animation/styling -->
         <h2 data-shadow='MTAccessibility'>MTAccessibility</h2>
         
         <br>
@@ -142,7 +144,8 @@
             <input type='button' value='Submit' id='add' style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" />
 
             <br><br>
-
+        </div>
+        
         <!-- Placeholder div for createTable in .js to place table with user comments -->
         <div id="websiteTable"></div>
     </center>
