--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -113,6 +113,11 @@
             <label style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Select Station:</label>
             <select id="Station" class="Station-Dropdown">
                 <option value="Station NULL" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Select Station...</option>
+                <option value="Brooklyn">Brooklyn</option>
+                <option value="Queens">Queens</option>
+                <option value="Manhattan">Manhattan</option>
+                <option value="Bronx">Bronx</option>
+                <option value="Staten Island">Staten Island</option>
             </select>
         </form>
 
